removed some attributes

--- a/test_splinter/test_reload-browser.html
+++ b/test_splinter/test_reload-browser.html
@@ -40,13 +40,13 @@
 <meta name="description" content="The Internet privacy company that empowers you to seamlessly take control of your personal information online, without any tradeoffs.">
 
 
-<link title="DuckDuckGo" type="application/opensearchdescription+xml" rel="search" href="https://duckduckgo.com/opensearch.xml?atb=v288-2gy"><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"DuckDuckGo","url":"http://duckduckgo.com/","logo":"https://duckduckgo.com/assets/logo_social-media.png"}</script></head>
+<link title="DuckDuckGo" type="application/opensearchdescription+xml" rel="search" href="https://duckduckgo.com/opensearch.xml?atb=v289-2gx"><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"DuckDuckGo","url":"http://duckduckgo.com/","logo":"https://duckduckgo.com/assets/logo_social-media.png"}</script></head>
 <body id="pg-index" class="page-index body--home body--onboarding">
 	<script type="text/javascript" src="/tl5.js"></script>
 <script type="text/javascript" src="/lib/l123.js"></script>
 <script type="text/javascript" src="/locale/en_US/duckduckgo14.js"></script>
-<script type="text/javascript" src="/util/u578.js"></script>
-<script type="text/javascript" src="/d2992.js"></script>
+<script type="text/javascript" src="/util/u579.js"></script>
+<script type="text/javascript" src="/d2994.js"></script>
 
 
 
@@ -75,7 +75,7 @@
     <input id="search_form_input_homepage" class="js-search-input search__input--adv" type="text" autocomplete="off" name="q" tabindex="1" value="" autocapitalize="none" autocorrect="off" placeholder="Search the web without being tracked">
     <input id="search_button_homepage" class="search__button  js-search-button" type="submit" tabindex="2" value="S">
     <input id="search_form_input_clear" class="search__clear  empty  js-search-clear" type="button" tabindex="3" value="X">
-    <div id="search_elements_hidden" class="search__hidden  js-search-hidden"><input type="hidden" class="js-search-hidden-field" name="t" value="hy"><input type="hidden" class="js-search-hidden-field" name="va" value="g"></div>
+    <div id="search_elements_hidden" class="search__hidden  js-search-hidden"><input type="hidden" class="js-search-hidden-field" name="t" value="hx"><input type="hidden" class="js-search-hidden-field" name="va" value="g"></div>
 <div class="search__autocomplete"><div class="acp-wrap js-acp-wrap"></div><div class="acp-footer is-hidden js-acp-footer"><span class="acp-footer__instructions">Shortcuts to other sites to search off DuckDuckGo</span><span class="acp-footer__link"><a class="no-visited js-acp-footer-link" href="/bang">Learn More</a></span></div></div></form>
 
 						</div>
